--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -1,4 +1,4 @@
-﻿@using Hallam.RedditRankedFlairs.Models
+﻿@using ChampionMains.Pyrobot.Models
 <div class="row">
     <button type="button" class="btn btn-primary" ng-click="registerSummoner()">
         <i class="fa fa-bars"></i> Link Summoner
