--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -29,11 +29,11 @@
                         </ul>
                     </div>
                 </td>
-                <td>{{summoner.region}}</td>
-                <td>{{summoner.summonerName}}</td>
+                <td ng-bind="summoner.region"></td>
+                <td ng-bind="summoner.summonerName"></td>
                 <td>
-                    {{summoner.league}}
-                    <span class="hint" ng-show="summoner.league == ''" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
+                    <span ng-bind="summoner.league"></span>
+                    <span class="hint" ng-show="!summoner.league" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
                 </td>
                 <td>
                     <span class="label label-primary" ng-show="summoner.active" ng-tooltip="top,Flair is updating for this summoner.">Active</span>
@@ -61,7 +61,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Really delete <strong>{{dialog.data.summonerName}} ({{dialog.data.region}})</strong>?
+                    Really delete <strong><span ng-bind="dialog.data.summonerName"></span> (<span ng-bind="dialog.data.region"></span>)</strong>?
                 </p>
             </div>
             <div class="modal-footer">
@@ -114,7 +114,7 @@
                         <p>
                             Validate your summoner by changing a <em>rune page</em> to:
                         </p>
-                        <blockquote>{{code}}</blockquote>
+                        <blockquote ng-bind="code"></blockquote>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <div class="form-group">
                     <div class="alert alert-dismissible alert-danger" ng-show="alert">
                         <button type="button" class="close" data-dismiss="alert">&times;</button>
-                        <span>{{alert.text}}</span>
+                        <span ng-bind="alert.text"></span>
                     </div>
                 </div>
                 <button type="button" class="btn btn-default" data-dismiss="modal" ng-disabled="busy">Cancel</button>
