Fix flashing No summoners linked.

--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -42,9 +42,10 @@
             </tr>
         </tbody>
         <tfoot>
-            <tr ng-show="!summoners.loading && summoners.items.length == 0">
-                <td colspan="5">No summoners linked.</td>
-            </tr>
+        @*TODO*@
+        <tr ng-show="summoners.items.length == 0">
+            <td colspan="5">No summoners linked.</td>
+        </tr>
         </tfoot>
     </table>
 </div>
