--- a/ChampionMains.Pyrobot/Content/css/site.less
+++ b/ChampionMains.Pyrobot/Content/css/site.less
@@ -54,7 +54,7 @@ table.table {
         border-top: 0;
     }
     thead > tr > th {
-        border-bottom: 2px solid #ddd;
+        border-bottom: 2px solid #777;
         color: #375a7f;
         line-height: 1.4285;
         padding: 8px;
@@ -63,7 +63,7 @@ table.table {
     }
     tbody > tr > td,
     tfoot > tr > td {
-        border-top: 1px solid #ddd;
+        border-top: 1px solid #777;
         font-size: 14px;
         padding: 8px;
         line-height: 1.4285;
@@ -185,4 +185,11 @@ h2 {
 }
 .fade-out {
     opacity: 0; 
+}
+
+.footer {
+    padding-top: 16px;
+    color: #777;
+    border-top: 1px solid #777;
+    margin-top: 100px;
 }
