--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -34,7 +34,7 @@
         <script src="~/Content/js/jquery.min.js"></script>
         @if (Page.Angular != null)
         {
-            <script src="~/Content/js/angular.js"></script>
+            <script src="~/Content/js/angular.min.js"></script>
         }
 
         @RenderSection("head", false)
