--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -7,6 +7,11 @@
 @section head {
     <link rel="stylesheet" href="~/Content/css/profile.less">
     <script>window.app = angular.module('Profile', []);</script>
+
+    <!-- datadragon leech -->
+    <script>var Riot = { DDragon: { m: {} } };</script>
+    <script src="http://ddragon.leagueoflegends.com/realms/na.js"></script>
+
     <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="~/Content/js/angular-services.js"></script>
     <script src="~/Content/js/profile.js"></script>
