--- a/ChampionMains.Pyrobot/Views/Login/about.cshtml
+++ b/ChampionMains.Pyrobot/Views/Login/about.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/_master.cshtml";
 }
 @section head {
-    <link rel="stylesheet" href="~/Content/css/about.less">
+    <link rel="stylesheet" href="~/Content/css/about.scss">
 }
 
 <h2>
