--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section head {
-    <link rel="stylesheet" href="~/Content/css/profile.less">
+    <link rel="stylesheet" href="~/Content/css/profile.scss">
     <script>window.app = angular.module('Profile', []);</script>
 
     <!-- datadragon leech -->
