--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -29,7 +29,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="~/Content/css/bootstrap.css">
-        <link rel="stylesheet" href="~/Content/css/site.less">
+        <link rel="stylesheet" href="~/Content/css/site.scss">
 
         <script src="~/Content/js/jquery.min.js"></script>
         @if (Page.Angular != null)
