--- a/ChampionMains.Pyrobot/Content/css/site.scss
+++ b/ChampionMains.Pyrobot/Content/css/site.scss
@@ -25,11 +25,11 @@ label.control-label {
 }
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
     body > .container {
         width: 780px;
     }
-}
+}*/
 
 h1, h2, h3, h4, h5 {
     margin: 0;
@@ -43,32 +43,6 @@ ul {
 
 span.label {
     font-weight: normal;
-}
-
-table.table thead th {
-    font-weight: bold;
-}
-
-table.table {
-    thead:first-child > tr:first-child > th {
-        border-top: 0;
-    }
-    thead > tr > th {
-        border-bottom: 2px solid #777;
-        color: #375a7f;
-        line-height: 1.4285;
-        padding: 8px;
-        text-align: left;
-        vertical-align: bottom;
-    }
-    tbody > tr > td,
-    tfoot > tr > td {
-        border-top: 1px solid #777;
-        font-size: 14px;
-        padding: 8px;
-        line-height: 1.4285;
-        vertical-align: top;
-    }
 }
 
 $header-height: 80px;
