--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -1,5 +1,7 @@
 ﻿@using ChampionMains.Pyrobot.Models
 
+<h1 class="text-center"><span class="rank" ng-class="'rank-' + summoners.getTopTier()"></span> /u/@User.Identity.Name</h1>
+
 <button type="button" class="btn btn-primary" ng-click="registerSummoner()">
     <i class="fa fa-bars"></i> Link Summoner
 </button>
@@ -11,20 +13,21 @@
         <th>Region</th>
         <th>Summoner</th>
         <th>Rank</th>
-        <th>Points</th>
+        <th>Mastery Points</th>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="summoner in summoners.items | filter: { hidden: '!' } | orderBy:'totalPoints':true track by summoner.id">
         <td>
-            <div class="btn-group" style="display: block">
-                <a class="btn btn-danger btn-xs" href="#" ng-click="deleteSummoner(summoner)"><span class="fa fa-times"></span></a>
-                <a class="btn btn-primary btn-xs" href="#" ng-click="refreshSummoner(summoner)"><span class="fa fa-refresh"></span></a>
+            <div class="btn-group btn-group-xs">
+                <a class="btn btn-default" href="#" ng-click="refreshSummoner(summoner)"><span class="fa fa-refresh"></span></a>
+                <a class="btn btn-danger" href="#" ng-click="deleteSummoner(summoner)"><span class="fa fa-times"></span></a>
             </div>
         </td>
         <td ng-bind="summoner.region"></td>
         <td ng-bind="summoner.summonerName"></td>
         <td>
+            <span ng-show="summoner.rank" class="rank sm" ng-class="'rank-' + summoner.tierString"></span>
             <span ng-bind="summoner.rank"></span>
             <span class="hint" ng-hide="summoner.rank" ng-tooltip="right,This summoner will update shortly.">Updating...</span>
         </td>
@@ -41,22 +44,33 @@
     </tfoot>
 </table>
 
+<h2>Subreddit Flair Settings</h2>
+
 <table class="table">
     <thead>
         <tr>
             <th><span ng-class="{ 'fade-out': !subreddits.loading }" class="fa fa-refresh spinning fade"></span></th>
+            <th><span class="hint" ng-tooltip="top,Click to enalbe or disable flair parts.">Set Flair</span></th>
             <th>Champion</th>
             <th>Subreddit</th>
-            <th>Points</th>
+            <th>Prestige</th>
+            <th>Mastery Points</th>
         </tr>
     </thead>
     <tbody>
         <tr ng-repeat="subreddit in subreddits.items | orderBy:subredditSorter:true track by subreddit.id">
+            <td><a class="btn btn-default btn-xs" href="#" ng-click="refreshSubreddit(summoner)"><span class="fa fa-refresh"></span></a></td>
             <td>
-                @*<div class="btn-group">
-                    <a class="btn btn-danger btn-xs" href="#" ng-click="deleteSummoner(summoner)"><span class="fa fa-times"></span></a>
-                    <a class="btn btn-primary btn-xs" href="#" ng-click="refreshSummoner(summoner)"><span class="fa fa-refresh"></span></a>
-                </div>*@
+                <div class="btn-group btn-group-xs" data-toggle="buttons">
+                    <label class="btn" ng-class="[ 'disabled btn-default', 'btn-success' ][+subreddit.rankEnabled]">
+                        <input ng-if="subreddit.rankEnabled" type="checkbox" autocomplete="off" />
+                        <span class="rank xs" ng-class="'rank-' + summoners.getTopTier()"></span> Rank
+                    </label>
+                    <label class="btn" ng-class="[ 'disabled btn-default', 'btn-success' ][+subreddit.championMasteryEnabled]">
+                        <input ng-if="subreddit.championMasteryEnabled" type="checkbox" autocomplete="off" />
+                        <span class="mastery" ng-class="'mastery-' + summoners.getChampionMastery(subreddit.champion.id).prestige"></span> Prestige
+                    </label>
+                </div>
             </td>
             <td>
                 <img class="champion" champ-img="subreddit.champion.identifier"
@@ -64,7 +78,15 @@
                 <span ng-bind="subreddit.champion.name"></span>
             </td>
             <td><a href="#" ng-href="http://www.reddit.com/r/{{ subreddit.name }}" target="_blank">/r/<span ng-bind="subreddit.name"></span></a></td>
-            <td ng-bind="summoners.getChampionMastery(subreddit.champion.id).points | number"></td>
+            <td>
+                <span class="mastery" ng-class="'mastery-' + summoners.getChampionMastery(subreddit.champion.id).prestige"></span>
+                <span ng-bind="summoners.getChampionMastery(subreddit.champion.id).points | number"></span> /
+                <span ng-bind="summoners.getChampionMastery(subreddit.champion.id).points | number"></span>
+            </td>
+            <td>
+                <span class="mastery" ng-class="'mastery-' + summoners.getChampionMastery(subreddit.champion.id).level"></span>
+                <span ng-bind="summoners.getChampionMastery(subreddit.champion.id).points | number"></span>
+            </td>
         </tr>
     </tbody>
     <tfoot>
